tried changing profile pic filename

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ hr {
     text-align: center;
 }
 #headshot {
-    background-image: url("../images/headshot.jpg");
+    background-image: url("../images/headshott.jpg");
     width: 260px;
     height: 260px;
     background-size: cover;
